add proper banner to turboreel

--- a/opensaas-sh/blog/src/content/docs/blog/2024-12-10-turboreel-os-ai-video-generator-built-with-open-saas.mdx
+++ b/opensaas-sh/blog/src/content/docs/blog/2024-12-10-turboreel-os-ai-video-generator-built-with-open-saas.mdx
@@ -18,10 +18,6 @@ import reddit200Upvotes from '../../../assets/turboreel/reddit-200-upvotes.webp'
 
 Peter is the creator of [**TurboReel**](https://turboreelgpt.tech/), an open-source platform with a paid SaaS layer, that transforms how creators generate short-form video content. With just a prompt, users can produce polished TikToks and YouTube Shorts in moments.
 
-<div style="background-color: #FFD700; padding: 1rem; text-align: center; font-size: 1.2rem; font-weight: bold; border-radius: 8px;">
-  ⭐️ Star <a href="https://github.com/opensaas" style="color: #0000FF; text-decoration: underline;">Open SaaS Repo</a> and support tools that help you build fast!
-</div>
-
 But like any SaaS founder, Peter faced the challenge of turning his vision into reality without getting bogged down in repetitive technical setup. That's where [**Wasp's Open SaaS boilerplate**](https://opensaas.sh/) came in.
 
 In this post, we'll cover three main things: what inspired Peter to kickstart the project, how he chose the tech stack to build on, and finally, how he made his first $100. Let's dive in!
@@ -113,6 +109,10 @@ app myApp {
   },
 }
 ```
+
+<div style="background-color: #FFD700; padding: 1rem; text-align: center; font-size: 1.2rem; font-weight: bold; border-radius: 8px; color: black;">
+  ⭐️ Star <a href="https://github.com/wasp-lang/open-saas" style="color: #0000FF; text-decoration: underline;">Open SaaS repo</a> and support tools that help you build fast!
+</div>
 
 ### Out-of-the-box Stripe integration
 
