change url to wasp.sh

--- a/opensaas-sh/blog/src/content/docs/blog/2024-12-16-my-gpt-wrapper.mdx
+++ b/opensaas-sh/blog/src/content/docs/blog/2024-12-16-my-gpt-wrapper.mdx
@@ -24,7 +24,7 @@ I wanted to share my journey building a micro-SaaS, [CoverLetterGPT](https://cov
 ### Quick Stats:
 
 - **Built in 1 week** 
-  - using [Wasp](https://wasp-lang.dev/), a React, NodeJS, & Prisma framework
+  - using [Wasp](https://wasp.sh/), a React, NodeJS, & Prisma framework
   - and [Chakra UI](https://chakra-ui.com/) for the design system.
 - **Runs on autopilot**
 - **~$550 MRR** after one year
@@ -60,7 +60,7 @@ Here's why I think you should aim for small, achievable SaaS projects instead of
 The most important lesson I've learned: **speed is everything.** The faster you launch, the faster you'll know if your idea works. Here's what worked for me:
 
 1. **Avoid long, drawn-out failures:** Build small, execute early.
-2. **Use the fastest tools available:** I used [Wasp](https://wasp-lang.dev/) because it gives me all the building blocks already set up (auth, database, cron jobs, email sending), letting me focus on the business logic of the app. Paired with [Chakra UI](https://chakra-ui.com/), I was able to build the app in about 1 week.
+2. **Use the fastest tools available:** I used [Wasp](https://wasp.sh/) because it gives me all the building blocks already set up (auth, database, cron jobs, email sending), letting me focus on the business logic of the app. Paired with [Chakra UI](https://chakra-ui.com/), I was able to build the app in about 1 week.
 3. **Forget perfection:** I didn't worry about making it pretty or perfect—it just had to work.
 
 ### Keep It Simple
@@ -91,7 +91,7 @@ If you're thinking about launching your own SaaS, here are some helpful resource
 
 - 👨‍💻 [CoverLetterGPT (Live App)](https://coverlettergpt.xyz/)
 - 💸 [Open-Source SaaS Template](https://github.com/wasp-lang/open-saas)
-- 🛠️ [Framework: Wasp](https://wasp-lang.dev/)
+- 🛠️ [Framework: Wasp](https://wasp.sh/)
 - ✨ [UI Components: Chakra UI](https://chakra-ui.com/)
 - 🛠️ [Hosting: Railway](https://railway.app/) & [Netlify](https://netlify.com/)
 - ✍️ [My Original Reddit Post](https://www.reddit.com/r/SideProject/comments/1h4t8vk/my_saas_only_makes_550_a_month_and_i_think_thats/)
