docs: added 'deploy and get swag' CTA.

--- a/opensaas-sh/blog/src/content/docs/guides/deploying.mdx
+++ b/opensaas-sh/blog/src/content/docs/guides/deploying.mdx
@@ -2,7 +2,7 @@
 title: Deploying
 banner:
   content: |
-    Open SaaS is now running on <b><a href='https://wasp.sh'>Wasp v0.16</a></b>! <br/>⚙️<br/>If you're running an older version and would like to upgrade, please follow the <a href="https://wasp.sh/docs/migration-guides/migrate-from-0-15-to-0-16">migration instructions.</a>
+    Have an Open SaaS app in production? <a href="https://e44cy1h4s0q.typeform.com/to/EPJCwsMi">We'll send you some swag! 👕</a>
 ---
 import { Image } from 'astro:assets';
 import npmVersion from '@assets/stripe/npm-version.png';
@@ -75,6 +75,12 @@ Here are a list of all of them (some of which you may not be using, e.g. Analyti
 - [ ] `AWS_S3_IAM_SECRET_KEY`
 - [ ] `AWS_S3_FILES_BUCKET`
 - [ ] `AWS_S3_REGION`
+
+:::tip[Deployed? Get some swag! 👕]
+
+Do you have an Open SaaS app running in production? If yes, we'd love to send some swag your way! All you need to do is fill out [this form](https://e44cy1h4s0q.typeform.com/to/EPJCwsMi) and we'll make it happen.
+
+:::
 
 ### Deploying to Fly.io
 
