Update CORS docs

--- a/opensaas-sh/blog/src/content/docs/guides/file-uploading.mdx
+++ b/opensaas-sh/blog/src/content/docs/guides/file-uploading.mdx
@@ -94,7 +94,7 @@ Now we need to change some permissions on the bucket to allow for file uploads f
                "*"
            ],
            "AllowedMethods": [
-               "PUT",
+               "POST",
                "GET"
            ],
            "AllowedOrigins": [
@@ -105,8 +105,6 @@ Now we need to change some permissions on the bucket to allow for file uploads f
        }
    ]
    ```
-   As an example, here are the CORS permissions for this site - https://opensaas.sh:
-   <Image src={corsExample} alt="cors-example" loading="lazy" />
 
 ### Get your AWS S3 credentials
 
