fix plausible post with an interactive demo

--- a/opensaas-sh/blog/src/content/docs/blog/2025-02-27-meet-marko-saric-co-founder-of-privacy-friendly-plausible-analytics.mdx
+++ b/opensaas-sh/blog/src/content/docs/blog/2025-02-27-meet-marko-saric-co-founder-of-privacy-friendly-plausible-analytics.mdx
@@ -34,8 +34,17 @@ Plausible Analytics is an easy to use, lightweight, open source and privacy-frie
 
 We have been working on Plausible for more than 6 years now, have more than 14,000 active subscribers at this point and have counted more than 136 billion pageviews so far.
 
-<div className="flex justify-center">
-  <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExYnJ0MzBudXNsd2Nnb2VtYWs3dWQ3ZXJjNTd1amh3bjMwaGhxbmwybiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/3oKIPEqDGUULpEU0aQ/giphy.gif" alt="Data is everywhere!" />
+Here's an interactive demo of Plausible Analytics:
+
+<div style={{ position: 'relative', paddingBottom: 'calc(53.11430527036276% + 41px)', height: 0, width: '100%' }}>
+  <iframe
+    src="https://demo.arcade.software/4kph6Di7Pv5wlVhhsmEw?embed"
+    title="Plausible Analytics: Live Demo"
+    frameBorder="0"
+    loading="lazy"
+    allowFullScreen
+    style={{ position: 'absolute', top: 0, left: 0, width: '100%', height: '100%', colorScheme: 'light' }}
+  ></iframe>
 </div>
 
 ## Plausible is bootstrapped and open-source—what made you choose this path instead of taking the more common VC route?
