--- a/opensaas-sh/blog/src/content/docs/blog/2025-03-12-going-from-an-idea-to-mvp-in-weeks-promptpandas-launches.mdx
+++ b/opensaas-sh/blog/src/content/docs/blog/2025-03-12-going-from-an-idea-to-mvp-in-weeks-promptpandas-launches.mdx
@@ -16,6 +16,7 @@ import meme1 from '../../../assets/promptpanda/meme1.jpg';
 import meme2 from '../../../assets/promptpanda/meme2.jpg';
 import ph1 from '../../../assets/promptpanda/ph1.png';
 import ph2 from '../../../assets/promptpanda/ph2.png';
+import listImg from '../../../assets/promptpanda/list.png';
 
 Did you know that most co-founders meet each other through work? **[Lander Willem](https://x.com/WWWillems)** met his friend and co-founder **[Bram Billiet](https://x.com/brambilicious)** while they were working at the local venture fund. They both shared the love towards LLMs and got the idea to kickstart their SaaS after experiencing the same pain points with managing and versioning prompts.
 
@@ -97,40 +98,13 @@ Most of their users today have found PromptPanda through organic SEO. They start
 
 ## Choosing the right stack for developing your SaaS app
 
-PromptPanda's team chose [Open SaaS](https://opensaas.sh/) because it significantly streamlined their product development by simplifying backend setup, database management, and built-in authentication. This was crucial as they needed an efficient solution that could save time due to their busy schedules. Wasp's default integration with Fly also enabled rapid deployment, allowing them to quickly validate their product idea without getting bogged down in infrastructure complexities.
+PromptPanda's team chose [Open SaaS](https://opensaas.sh/) because it significantly streamlined their product development by simplifying backend setup, database management, and built-in authentication. This was crucial as they needed an efficient solution that could save time due to their busy schedules. [Wasp](https://wasp.sh/)'s default integration with Fly also enabled rapid deployment, allowing them to quickly validate their product idea without getting bogged down in infrastructure complexities.
 
 Here's a full overview of their tech stack alongside all the tools they rely on to run their SaaS:
 
-**Full-stack JavaScript framework:**
-
-- [Wasp](https://wasp.sh/) (React, Node.js, Prisma)
-
-**UI:**
-
-- [shadcn](https://ui.shadcn.com/)
-
-**Payment Integration:**
-
-- Stripe
-
-**IDE & Development Tools:**
-
-- Cursor & Biome
-
-**AI & Background Jobs:**
-
-- Trigger.dev (background jobs)
-- Google Gemini (AI integrations and prompt improvements)
-- Vercel AI SDK (AI provider integrations)
-
-**Other Tools:**
-
-- Tally.so (forms for feedback, feature requests, bug reports)
-- GitBook (documentation & knowledge base)
-- WordPress (website & blog)
-- SendGrid (mail provider)
-- Notion.so (internal knowledge sharing)
-- Discord (internal notifications & webhooks for payments, etc.)
+<div className="flex justify-center">
+<Image src={listImg} alt="PromptPanda tech stack" loading="lazy" />
+</div>
 
 ## Are you ready to ship your SaaS now?
 
