--- a/opensaas-sh/blog/src/content/docs/blog/2024-12-16-my-gpt-wrapper.mdx
+++ b/opensaas-sh/blog/src/content/docs/blog/2024-12-16-my-gpt-wrapper.mdx
@@ -1,5 +1,5 @@
 ---
-title: My GPT Wrapper Makes $550 MRR One Year After Launch
+title: "My GPT Wrapper Makes $550 MRR One Year After Launch"
 date: 2024-12-16
 tags:
   - gpt
