--- a/opensaas-sh/blog/src/content/docs/guides/cookie-consent.mdx
+++ b/opensaas-sh/blog/src/content/docs/guides/cookie-consent.mdx
@@ -104,7 +104,7 @@ Below is an example of what your config might look like if you want to give user
             sections: [
               {
                 title: 'Your Privacy Choices',
-                description: `In this panel you can express some preferences related to the processing of your personal information. You may review and change expressed choices at any time by resurfacing this panel via the provided link. To deny your consent to the specific processing activities described below, switch the toggles to off or use the “Reject all” button and confirm you want to save your choices.`,
+                description: `In this panel you can express some preferences related to the processing of your personal information. You may review and change expressed choices at any time by resurfacing this panel via the provided link. To deny your consent to the specific processing activities described below, switch the toggles to off or use the "Reject all" button and confirm you want to save your choices.`,
               },
               {
                 title: 'Strictly Necessary',
