--- a/opensaas-sh/blog/src/content/docs/blog/2025-05-07-you-should-still-launch-your-product-on-ph.mdx
+++ b/opensaas-sh/blog/src/content/docs/blog/2025-05-07-you-should-still-launch-your-product-on-ph.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Product Hunt doesn't really work, but you should still use it to launch your product"
-date: 2025-03-27
+date: 2025-05-07
 tags:
 - saas
 - webdev
@@ -8,6 +8,7 @@ tags:
 - indiehackers
 authors: matija
 ---
+import VideoPlayer from '../../../components/VideoPlayer.astro';
 import { Image } from 'astro:assets';
 import StarOpenSaaSCTA from '../../../components/StarOpenSaaSCTA.astro';
 import ph1 from '../../../assets/ph/1.png';
@@ -40,7 +41,7 @@ Being fresh out of our latest launch from a week ago, I wanted to share here our
 
 ## About us - launched 6x, >2,000 upvotes
 
-We've launched 6 times on Product Hunt in the last 4 years, won "Top Product" awards (#1 and #5 of the day), and collected over 2,000 upvotes in total. We just finished our sixth launch with [Open SaaS - an open-source alternative to $300+ SaaS starters](https://github.com/wasp-lang/open-saas/), a week ago.
+We've launched 6 times on Product Hunt in the last 4 years, won "Top Product" awards (#1 and #5 of the day), and collected over 2,000 upvotes in total. Our last launch was with [Open SaaS - an open-source alternative to $300+ SaaS starters](https://github.com/wasp-lang/open-saas/).
 
 <div className="flex justify-center"> 
 <Image src={ph1} alt="Make apps for everyone" loading="lazy" />
@@ -231,6 +232,7 @@ It's become a regular part of our launch workflow, and for whatever new feature(
 
 For example, this is a video showing how auth works in Wasp - first we used it for our [Product Hunt launch](https://www.producthunt.com/products/wasp-lang-alpha#full-stack-auth-for-react-node-by-wasp), and now it lives [at the top of our auth docs](https://wasp-lang.dev/docs/auth/overview).
 
+<VideoPlayer src="https://www.youtube.com/embed/Qiro77q-ulI?si=svfX2EoQ9U0R_LGa" />
 
 ## Thanks for reading!
 
