--- a/opensaas-sh/blog/src/content/docs/blog/2025-07-29-open-saas-version-2.mdx
+++ b/opensaas-sh/blog/src/content/docs/blog/2025-07-29-open-saas-version-2.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Open SaaS v2.0 -- New Look, New Features. Same Open-Source Dopeness."
 subtitle: "A summary of the changes and improvements in the latest version of Open SaaS."
-date: 2025-07-18
+date: 2025-07-29
 tags:
   - gpt
   - saas
@@ -25,7 +25,11 @@ import openSaaSRedesign from '../../../assets/open-saas-v2/open-saas-redesign.we
 
 What could make a free, open-source, full-featured SaaS boilerplate even better? Probably a fresh new look on top the hottest UI library out there, plus a slew of new features. 
 
-Well, that's exactly what we've done with Open SaaS v2.0. The most significant change is a complete redesign using Shadcn UI, providing a more modern, consistent, and customizable experience out of the box. This update also includes key framework upgrades, new integrations, and significant codebase improvements to help you build your SaaS faster than ever.
+Well, that's exactly what we've done with Open SaaS v2.0. And we're launching it on Product Hunt (go show your support for open-source dopeness!). 
+
+<a href="https://www.producthunt.com/products/open-saas?embed=true&utm_source=badge-featured&utm_medium=badge&utm_source=badge-open&#0045;saas&#0045;2" target="_blank"><img src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=991058&theme=neutral&t=1753436521042" alt="Open&#0032;SaaS - The&#0032;open&#0045;source&#0032;SaaS&#0032;boilerplate&#0032;with&#0032;superpowers&#0033; | Product Hunt" style="width: 250px; height: 54px;" width="250" height="54" /></a>
+
+The most significant change is a complete redesign using Shadcn UI, providing a more modern, consistent, and customizable experience out of the box. This update also includes key framework upgrades, new integrations, and significant codebase improvements to help you build your SaaS faster than ever.
 
 You're welcome.
 
